# Melo-News

./: .coverage  .dockerignore  .env  .env.ai.example  .env.example  .env.local  .env.production.example  .gitignore  .pre-commit-config.yaml  2024json.json  AI_IMPLEMENTATION_SUMMARY.md  CI_CD_DEPLOYMENT_CHECKLIST.md  CONTRIBUTING.md  Dockerfile  GITFLOW_IMPLEMENTATION.md  INSTALLATION.md  LICENSE  QUICK_START_AI.md  README.md  SEARCH_ADJUSTMENTS_NEEDED.md  SEARCH_TAG_DESIGN_COMPARISON.md  __init__.py  add_file_types.py  asset-manifest.json  benchmark_advanced_geosearch.py  benchmark_geosearch.py  check_azure_blobs.py  check_database_urls.py  cli.py  config.py  config.py.example  debug_regex.py  docker-compose.prod.yml  docker-compose.yaml  enable_cors.py  enable_public_access.py  index.html  infra_overview.html  kafkaConsumer.py  kafkaProducer.py  (+30 more)
android/: .gitignore  build.gradle.kts  settings.gradle.kts
app/: DockerFile  __init__.py  migrate.sh  models.py  test_maparea_component.py
auth/: __init__.py  routes.py
data/: palestinians_towns.geojson  palestinians_towns.geojson.bak  palestinians_towns.json  palestinians_towns_enhanced.geojson
docs/: AI_UPLOAD_SETUP.md  README.md  USER_GUIDE.md  api-reference.md  architecture.md  deploy.md
file_types/: routes.py
file_upload/: routes.py
frontend/: .env  package-lock.json  package.json
modules/: azure_handler.py  constants.py  database.py  geocoder.py  location_detector.py  object_storage.py  pipeline_task.py  regions.py  s3_handler.py  subject_filter.py  video_handler.py
profile/: routes.py
(+343 files in other folders)
