[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "melo-news-backend"
version = "0.1.0"
# 3.10 is a real floor, not a preference: the code uses PEP 604 unions
# (`str | None`), which fail to import on 3.9.
requires-python = ">=3.10"

[project.scripts]
backend = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
